Add thank you message to cr3ativ developers

--- a/index.html
+++ b/index.html
@@ -1,3 +1,18 @@
+<!-- 
+  Hey, thanks for checking out my CV. If you're reading this I'm assuming your a
+  developer, possibly trying to see how the site works. It was written/designed
+  by the amazing devs over at cr3ativ.com. Definitely recommend it if you're
+  looking for a personal page, the HTML is very readable, and I only experienced
+  one significant CSS issue where I had to do some debugging while setting it
+  up. That said, after reviewing all the code, I'm certain this isn't something
+  I couldn't build something similar to if given enough time, it's not a very
+  complicated page from a programming perspective, I used it for the design,
+  which is probably the only aspect of this I couldn't come up with all on my own.
+
+  http://bit.ly/1MCT81O (link to the themeforest.org page for this profile)
+-->
+
+
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 
